# escape-game

./: .gitignore  CMakeLists.txt  README.md  configure.h.in  lint.sh  main.cpp
include/: ConcreteFactoryFake.hpp  ConcreteFactoryNormal.hpp  ConcreteFactoryTrap.hpp  Coordinates.hpp  CoordinatesAdapter.hpp  Drawer.hpp  FakeChest.hpp  FakeDoor.hpp  Game.hpp  IAbstractFactory.hpp  IPortal.hpp  Level.hpp  NormalDoor.hpp  NormalPortal.hpp  ObjectsData.hpp  Player.hpp  Tester.hpp  TrapChest.hpp  TrapDoor.hpp  TrapPortal.hpp  draw.h
include/factory/: ConcreteFactoryFake.hpp  ConcreteFactoryNormal.hpp  ConcreteFactoryTrap.hpp  IAbstractFactory.hpp
include/objects/: Enter.hpp  Exit.hpp  FakeChest.hpp  FakeDoor.hpp  FakePortal.hpp  IChest.hpp  IDoor.hpp  IObject.hpp  IPortal.hpp  NormalChest.hpp  NormalDoor.hpp  NormalPortal.hpp  ObjectsData.hpp  PlayerCharacter.hpp  PositionPointer.hpp  TrapChest.hpp  TrapDoor.hpp  TrapPortal.hpp  Wall.hpp
levels/: all.json  intro.json  template.json
source/: ConcreteFactoryFake.hpp  ConcreteFactoryNormal.hpp  ConcreteFactoryTrap.hpp  FakeChest.hpp  FakeDoor.hpp  FakePortal.hpp  IAbstractFactory.hpp  IChest.hpp  IDoor.hpp  IPortal.hpp  NormalChest.hpp  NormalDoor.hpp  NormalPortal.hpp  ObjectsData.hpp  draw.h  main.cpp
src/: CMakeLists.txt  Coordinates.cpp  Game.cpp  Level.cpp  Player.cpp  level_builder.cpp  main.cpp
src/factory/: ConcreteFactoryFake.cpp  ConcreteFactoryNormal.cpp  ConcreteFactoryTrap.cpp
src/objects/: Enter.cpp  Exit.cpp  FakeChest.cpp  FakeDoor.cpp  FakePortal.cpp  IChest.cpp  IDoor.cpp  IObject.cpp  IPortal.cpp  NormalChest.cpp  NormalDoor.cpp  NormalPortal.cpp  PlayerCharacter.cpp  PositionPointer.cpp  TrapChest.cpp  TrapDoor.cpp  TrapPortal.cpp  Wall.cpp
tests/: tests.cpp  unit_tests.cpp
tests/factory/: factory_tests.cpp
tests/levels/: levels_tests.cpp
